--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css";
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+
+body, html {
+    font-family: 'Ubuntu', sans-serif;
+    height: 100%;
+}
