--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
-    <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse"
+    <button class="navbar-toggler hidden-lg-up rounded-circle" type="button" data-toggle="collapse"
             data-target="#navbar" aria-controls="navbar"
             aria-expanded="false" aria-label="Toggle navigation">
         <img src="/assets/brand.svg" width="30" height="30" alt="">
@@ -9,14 +9,17 @@
             <img src="/assets/brand.svg" width="30" height="30" alt="">
         </a>
         <ul class="nav navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link disabled" href="#">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link disabled" href="#">Contact</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">Blog</a>
             </li>
         </ul>
     </div>
